--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-persist": "4.6.0",
     "redux-thunk": "^2.2.0"
   }
 }
